--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kabegami</title>
+    <title>Kabegame</title>
     <!-- Vue DevTools (仅开发模式) -->
     <script>
       // 仅在开发模式下加载 Vue DevTools
