--- a/wallpaper.html
+++ b/wallpaper.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kabegami Wallpaper</title>
+    <title>Kabegame Wallpaper</title>
     <style>
       * {
         margin: 0;
