--- a/html/plugin-editor.html
+++ b/html/plugin-editor.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kabegame Wallpaper</title>
+    <title>Kabegame Plugin Editor</title>
     <style>
       * {
         margin: 0;
@@ -11,21 +11,18 @@
         box-sizing: border-box;
       }
       html,
-      body {
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        background: transparent;
-      }
+      body,
       #app {
         width: 100%;
         height: 100%;
-        background: transparent;
+        overflow: hidden;
       }
     </style>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/wallpaper.ts"></script>
+    <script type="module" src="/src/plugin_editor.ts"></script>
   </body>
 </html>
+
+
