--- a/apps/main/html/index.html
+++ b/apps/main/html/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="zh-CN" style="background: transparent">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kabegame</title>
   </head>
   <body style="background: transparent">
     <div id="app"></div>
