--- a/apps/main/html/wallpaper.html
+++ b/apps/main/html/wallpaper.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kabegame Wallpaper</title>
     <style>
       * {
         margin: 0;
@@ -29,5 +28,3 @@
     <script type="module" src="/src/wallpaper.ts"></script>
   </body>
 </html>
-
-
