--- a/apps/plugin-editor/html/index.html
+++ b/apps/plugin-editor/html/index.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kabegame Plugin Editor</title>
     <style>
       * {
         margin: 0;
@@ -24,5 +23,3 @@
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
-
-
